--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap');
 * {
   padding: 0;
   margin: 0;
@@ -22,47 +22,75 @@ body {
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
+  overflow-x: hidden;
 }
 
-/*HELPER CLASSES*/
-.padding-vertical--sm {
+/****** HELPER CLASSES ******/
+.padding-vertical--4rem {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
-.padding-vertical--lg {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+.padding-horizontal--4rem {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+.margin-top--4rem {
+  margin-top: 4rem;
 }
 
-/*GENERAL CLASSES*/
+/****** GENERAL CLASSES ******/
 .container {
   margin: 0 auto;
   width: 100%;
   max-width: 120rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
+.heading-primary {
+  font-size: 8.2rem;
+  line-height: 1.2;
+  font-weight: 700;
+  letter-spacing: -3px;
+  color: var(--Very-Dark-Violet);
+}
+.heading-secondary {
+  font-size: 4rem;
+  line-height: 1.2;
+  font-weight: 700;
+  color: var(--Very-Dark-Violet);
+}
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  background-color: var(--Cyan);
+  border-radius: 5rem;
+  padding: 0.6em 1.6em;
+  color: #fff !important;
+  text-decoration: none;
+  color: var(--Grayish-Violet);
+}
+
 .font-bold {
   font-weight: 700;
 }
-.btn {
-  background-color: var(--Cyan);
-  border-radius: 5rem;
-  padding: 1rem 2rem;
-  color: #fff !important;
-}
-/*NAVIGATION BAR */
+
+/****** NAVIGATION BAR ******/
 .navbar {
   width: 100%;
 }
 .navbar__container {
   display: flex;
   align-items: center;
-  width: 1200px;
+  height: 100%;
+  width: 100%;
+  max-width: 120rem;
 }
 .navbar__logo-box {
   margin-right: 8rem;
 }
 .navbar__list {
   display: flex;
+  align-items: center;
   gap: 3rem;
 }
 .navbar__list--right-align {
@@ -73,15 +101,80 @@ body {
   list-style: none;
   display: inline-block;
 }
-
 .navbar__link:link,
 .navbar__link:visited {
-  text-decoration: none;
   color: var(--Grayish-Violet);
+  text-decoration: none;
   font-size: 1.6rem;
 }
-.navbar__btn {
-  /* margin-left: 3rem; */
+
+/* .navbar__btn {
+} */
+
+/****** HEADER ******/
+
+.header__container {
+  display: flex;
+  position: relative;
+}
+.header__text {
+  width: 55%;
+}
+.header__subheading {
+  font-size: 2.4rem;
+  font-weight: 500;
+  color: var(--Grayish-Violet);
+}
+.header__btn:link,
+.header__btn:visited {
+  font-size: 2rem;
+}
+.header__ilustration-box {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.header__ilustration {
+  transform: translateX(25rem);
+}
+
+/****** MAIN ******/
+.main {
+  margin-top: 20rem;
+  background-color: var(--Grayish-Violet);
+}
+/*Link shorter section*/
+
+.link-shorter__box {
+  padding: 6rem;
+  background-color: var(--Dark-Violet);
+  transform: translateY(-50%);
+  border-radius: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 2rem;
+  background-image: url(images/bg-shorten-desktop.svg);
+  background-size: cover;
+}
+.link-shorter__input {
+  width: 100%;
+  padding: 2rem;
+  border-radius: 1rem;
+  border: none;
+  font-size: 2rem;
+  color: var(--Grayish-Violet);
+}
+.link-shorter__input::placeholder {
+  color: var(--Grayish-Violet);
+}
+.link-shorter__btn:link,
+.link-shorter__btn:visited {
+  font-size: 2rem;
+  border-radius: 1rem;
+  white-space: nowrap;
+  display: flex;
+  align-items: center;
 }
 
 /* .attribution {
