--- a/style.css
+++ b/style.css
@@ -226,6 +226,9 @@ body {
   color: rgb(217, 47, 20);
   font-style: italic;
 }
+.error-msg.error {
+  visibility: visible;
+}
 
 .shortened-link__container {
   margin-top: -5rem;
