--- a/style.css
+++ b/style.css
@@ -268,6 +268,16 @@ body {
 .copied-link {
   background-color: var(--Dark-Violet);
 }
+.clear-all:link,
+.clear-all:visited {
+  color: rgb(217, 47, 20);
+  font-size: 1.6rem;
+  text-decoration: none;
+  margin-right: 1rem;
+  display: block;
+  text-align: right;
+  visibility: hidden;
+}
 /*Statistics Section*/
 
 .statistics__cards-container {
@@ -294,10 +304,10 @@ body {
   position: relative;
   z-index: 4;
 }
-.statistics__card--2 {
+.statistics__card-2 {
   transform: translateY(4rem);
 }
-.statistics__card--3 {
+.statistics__card-3 {
   transform: translateY(8rem);
 }
 .card__icon-box {
