--- a/style.css
+++ b/style.css
@@ -86,8 +86,7 @@ body {
   font-weight: 500;
   line-height: 1.6;
 }
-.btn:link,
-.btn:visited {
+.btn {
   display: inline-block;
   background-color: var(--Cyan);
   border-radius: 5rem;
@@ -114,7 +113,6 @@ body {
 .navbar__container {
   display: flex;
   align-items: center;
-  height: 100%;
 }
 .navbar__logo-box {
   margin-right: 8rem;
@@ -154,8 +152,7 @@ body {
   font-size: 2.4rem;
   color: var(--Grayish-Violet);
 }
-.header__btn:link,
-.header__btn:visited {
+.header__btn {
   font-size: 2rem;
 }
 .header__ilustration-box {
@@ -213,8 +210,7 @@ body {
 .link-shorter__input::placeholder {
   color: var(--Grayish-Violet);
 }
-.link-shorter__btn:link,
-.link-shorter__btn:visited {
+.link-shorter__btn {
   font-size: 2rem;
   border-radius: 1rem;
   white-space: nowrap;
@@ -261,8 +257,7 @@ body {
   text-decoration: none;
   color: var(--Cyan);
 }
-.copy-link__btn:link,
-.copy-link__btn:visited {
+.copy-link__btn {
   font-size: 1.4rem;
   border-radius: 0.5rem;
   white-space: nowrap;
@@ -355,11 +350,6 @@ body {
   display: flex;
   justify-content: space-between;
 }
-.footer__links-box {
-  width: 70%;
-  display: flex;
-  justify-content: space-between;
-}
 .footer__list {
   list-style: none;
 }
@@ -429,7 +419,7 @@ body {
     font-size: 2.2rem;
   }
   .header__ilustration-box {
-    margin-top: 1rem;
+    top: 1rem;
   }
 }
 
@@ -464,46 +454,46 @@ body {
   }
 }
 @media (max-width: 821px) {
+  .header__btn,
+  .navbar__btn,
+  .cta__btn {
+    padding: 1.6rem 6rem;
+    font-size: 2.4rem;
+  }
   .navbar {
-    position: relative;
+    padding: 0;
+  }
+  .navbar__logo-box {
+    padding: 4rem 0 2rem;
+    z-index: 999;
+    align-self: flex-start;
+    margin-right: 0;
+    margin-left: 6rem;
+  }
+  .navbar__logo {
+    transform: scale(1.3);
   }
   .navbar__container {
     position: absolute;
-    top: 10rem;
     flex-direction: column;
     align-items: center;
   }
-  .navbar__logo-box {
-    position: absolute;
-    top: -6rem;
-    left: 6rem;
-  }
-  .navbar__logo {
-    transform: scale(1.2);
-  }
-
   .navbar__list {
     background-color: var(--Dark-Violet);
     z-index: 999;
     flex-direction: column;
     align-items: stretch;
     text-align: center;
-    gap: 3rem;
-    width: 80%;
-    height: 40rem;
+    width: 90%;
     padding: 4rem;
   }
-
   .navbar__list:first-of-type {
     border-radius: 1rem 1rem 0 0;
-    padding-top: 6rem;
   }
   .navbar__list:last-of-type {
     position: relative;
-    padding-bottom: 6rem;
     border-radius: 0 0 1rem 1rem;
   }
-
   .navbar__list:last-of-type::before {
     content: '';
     position: absolute;
@@ -516,14 +506,134 @@ body {
   }
   .navbar__list.right-align {
     margin: 0;
+    padding-left: 4rem;
   }
   .navbar__link:link,
   .navbar__link:visited {
     color: #fff;
     font-size: 2.4rem;
   }
-  .btn.navbar__link {
+  .navbar__btn {
     display: block;
-    /* width: 100%; */
+  }
+  .heading-primary {
+    margin-top: 3rem;
+    font-size: 6rem;
+  }
+  .header__ilustration-box {
+    top: 6.4rem;
+  }
+  .overlay {
+    filter: blur(3px);
+  }
+  .statistics__cards-container {
+    gap: 2rem;
+  }
+
+  .footer__list-social {
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 0;
+  }
+  .attribution {
+    text-align: center;
+  }
+}
+@media (max-width: 700px) {
+  .link-shorter__box {
+    display: block;
+  }
+  .link-shorter__btn {
+    margin-top: 1rem;
+    justify-content: center;
+    padding: 1.6rem;
+    font-size: 2.4rem;
+  }
+  .statistics__cards-container {
+    flex-direction: column;
+    gap: 6rem;
+  }
+
+  .statistics__cards-container::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translatex(-50%);
+    width: 8px;
+    background-color: var(--Cyan);
+    height: 100%;
+  }
+  .card__icon-box {
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .card__heading {
+    text-align: center;
+  }
+  .card__paragraph {
+    text-align: center;
+  }
+}
+
+@media (max-width: 550px) {
+  .container {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+  .heading-primary {
+    font-size: 4.8rem;
+  }
+  .heading-secondary {
+    font-size: 3.4rem;
+  }
+  .header__subheading {
+    font-weight: 500;
+  }
+  .link-shorter {
+    padding: 4rem;
+  }
+  .statistics {
+    margin-top: 0;
+  }
+  .section-CTA {
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+  }
+  .footer__container {
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+    text-align: center;
+  }
+  .footer__logo {
+    transform: scale(1.3);
+  }
+  .footer__list-social {
+    flex-direction: row;
+    gap: 3rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .container {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .heading-primary {
+    font-size: 4.4rem;
+  }
+  .heading-secondary {
+    font-size: 3rem;
+  }
+  .header__subheading {
+    font-size: 2rem;
+  }
+  .navbar__list {
+    width: 100%;
+  }
+
+  .statistics {
+    margin-top: 0;
   }
 }
