--- a/style.css
+++ b/style.css
@@ -105,20 +105,28 @@ body {
   font-weight: 700;
 }
 .right-align {
-  margin-left: auto;
+  margin-right: auto;
 }
 
 /****** NAVIGATION BAR ******/
 
 .navbar__container {
   display: flex;
-  align-items: center;
-}
-.navbar__logo-box {
-  margin-right: 8rem;
-  display: flex;
+  justify-content: space-between;
 }
 
+.navbar__logo {
+  height: 100%;
+}
+
+.navbar__nav-icon {
+  display: none;
+}
+.navbar__links {
+  display: flex;
+  width: 70%;
+  justify-content: space-between;
+}
 .navbar__list {
   display: flex;
   align-items: center;
@@ -160,9 +168,6 @@ body {
   top: 0;
   right: -20rem;
 }
-/* .header__ilustration {
-  transform: translateX(25rem);
-} */
 
 /****** MAIN ******/
 .main {
@@ -446,53 +451,59 @@ body {
   .header__subheading {
     font-size: 2.4rem;
   }
-  .navbar__list.right-align {
-    padding-left: 3rem;
-  }
   .statistics {
     margin-top: 4rem;
   }
 }
+@media (max-width: 851px) {
+  .navbar__links {
+    width: 74%;
+  }
+}
+
 @media (max-width: 821px) {
   .header__btn,
   .navbar__btn,
   .cta__btn {
     padding: 1.6rem 6rem;
-    font-size: 2.4rem;
-  }
-  .navbar {
-    padding: 0;
-  }
-  .navbar__logo-box {
-    padding: 4rem 0 2rem;
-    z-index: 999;
-    align-self: flex-start;
-    margin-right: 0;
-    margin-left: 6rem;
-  }
-  .navbar__logo {
-    transform: scale(1.3);
   }
   .navbar__container {
+    align-items: center;
+    height: 4.825rem;
+  }
+  .navbar__logo-box {
+    height: 100%;
+  }
+  .navbar__nav-icon {
+    display: block;
+  }
+
+  .navbar__links {
+    /* display: none; */
     position: absolute;
+    top: 14rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
     flex-direction: column;
     align-items: center;
+    width: 80%;
+    gap: 0;
+    border-radius: 1rem;
+    background-color: var(--Dark-Violet);
+    padding: 2rem 0;
   }
   .navbar__list {
-    background-color: var(--Dark-Violet);
     z-index: 999;
     flex-direction: column;
     align-items: stretch;
     text-align: center;
-    width: 90%;
+    width: 100%;
     padding: 4rem;
   }
-  .navbar__list:first-of-type {
-    border-radius: 1rem 1rem 0 0;
-  }
+
   .navbar__list:last-of-type {
     position: relative;
-    border-radius: 0 0 1rem 1rem;
   }
   .navbar__list:last-of-type::before {
     content: '';
@@ -504,10 +515,7 @@ body {
     width: 80%;
     transform: translateX(-50%);
   }
-  .navbar__list.right-align {
-    margin: 0;
-    padding-left: 4rem;
-  }
+
   .navbar__link:link,
   .navbar__link:visited {
     color: #fff;
@@ -517,19 +525,17 @@ body {
     display: block;
   }
   .heading-primary {
-    margin-top: 3rem;
     font-size: 6rem;
   }
   .header__ilustration-box {
     top: 6.4rem;
   }
-  .overlay {
+  .header__ilustration-box.overlay {
     filter: blur(3px);
   }
   .statistics__cards-container {
     gap: 2rem;
   }
-
   .footer__list-social {
     flex-direction: column;
     justify-content: flex-start;
@@ -581,6 +587,9 @@ body {
     padding-left: 3rem;
     padding-right: 3rem;
   }
+  .navbar__links {
+    width: 90%;
+  }
   .heading-primary {
     font-size: 4.8rem;
   }
@@ -599,6 +608,10 @@ body {
   .section-CTA {
     padding-top: 10rem;
     padding-bottom: 10rem;
+  }
+
+  .section-CTA__heading {
+    margin-bottom: 3rem;
   }
   .footer__container {
     flex-direction: column;
@@ -632,7 +645,6 @@ body {
   .navbar__list {
     width: 100%;
   }
-
   .statistics {
     margin-top: 0;
   }
